⚙️ Исправления багов для работы с Лаб.7
