# docs/swagger.json
@@ -107,6 +107,11 @@
         },
         "/api/generation-requests/draft/": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Возвращает информацию о черновике заявки текущего пользователя",
                 "consumes": [
                     "application/json"
